// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fargate service synth FargateService with a managed EBS volume should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_availability_zones": {
      "AvailabilityZones": {
        "provider": "aws"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "EBSVolume_EBSRole_AssumeRolePolicy_AA76888B": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs": {
        "service_name": "ecs"
      },
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_cluster": {
      "EcsCluster_97242B84": {
        "name": "EcsCluster",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_ecs_service": {
      "FargateService_14DE0490": {
        "cluster": "\${aws_ecs_cluster.EcsCluster_97242B84.name}",
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552",
          "aws_iam_role_policy_attachment.EBSVolume_AmazonECSInfrastructureRolePolicyForVolumes_Roles0_5949B0BC",
          "data.aws_iam_policy_document.EBSVolume_EBSRole_AssumeRolePolicy_AA76888B",
          "aws_iam_role.EBSVolume_EBSRole_C27DD941"
        ],
        "deployment_maximum_percent": 200,
        "deployment_minimum_healthy_percent": 50,
        "enable_ecs_managed_tags": false,
        "launch_type": "FARGATE",
        "name": "FargateService",
        "network_configuration": {
          "assign_public_ip": false,
          "security_groups": [
            "\${aws_security_group.FargateService_SecurityGroup_0A0E79CB.id}"
          ],
          "subnets": [
            "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}",
            "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}",
            "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
          ]
        },
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_definition": "\${aws_ecs_task_definition.FargateTaskDef_C6FB60B4.arn}",
        "volume_configuration": {
          "managed_ebs_volume": {
            "file_system_type": "xfs",
            "role_arn": "\${aws_iam_role.EBSVolume_EBSRole_C27DD941.arn}",
            "size_in_gb": 20
          },
          "name": "nginx-vol"
        }
      }
    },
    "aws_ecs_task_definition": {
      "FargateTaskDef_C6FB60B4": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"amazon/amazon-ecs-sample\\",\\"mountPoints\\":[{\\"containerPath\\":\\"/var/lib\\",\\"readOnly\\":false,\\"sourceVolume\\":\\"nginx-vol\\"}],\\"name\\":\\"web\\"}]",
        "cpu": "256",
        "family": "FargateTaskDef",
        "memory": "512",
        "network_mode": "awsvpc",
        "requires_compatibilities": [
          "FARGATE"
        ],
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.FargateTaskDef_TaskRole_0B257552.arn}"
      }
    },
    "aws_eip": {
      "MyVpc_PublicSubnet1_EIP_096967CB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_EIP_8CCBA239": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_EIP_C5ACADAB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_iam_role": {
      "EBSVolume_EBSRole_C27DD941": {
        "assume_role_policy": "\${data.aws_iam_policy_document.EBSVolume_EBSRole_AssumeRolePolicy_AA76888B.json}",
        "name_prefix": "g-EBSVolumeEBSRole",
        "tags": {
          "Name": "Default-EBSRole",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "FargateTaskDef_TaskRole_0B257552": {
        "assume_role_policy": "\${data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4.json}",
        "name_prefix": "g-FargateTaskDefTaskRole",
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_iam_role_policy_attachment": {
      "EBSVolume_AmazonECSInfrastructureRolePolicyForVolumes_Roles0_5949B0BC": {
        "policy_arn": "arn:\${data.aws_partition.Partitition.partition}:iam::aws:policy/service-role/AmazonECSInfrastructureRolePolicyForVolumes",
        "role": "\${aws_iam_role.EBSVolume_EBSRole_C27DD941.name}"
      }
    },
    "aws_internet_gateway": {
      "MyVpc_IGW_5C4A4F63": {
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway_attachment": {
      "MyVpc_VPCGW_488ACE0D": {
        "internet_gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_nat_gateway": {
      "MyVpc_PublicSubnet1_NATGateway_AD3400C1": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet1_EIP_096967CB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB",
          "aws_route.MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_NATGateway_91BFBEC9": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet2_EIP_8CCBA239.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D",
          "aws_route.MyVpc_PublicSubnet2_DefaultRoute_052936F6"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_NATGateway_D4B50EBE": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet3_EIP_C5ACADAB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4",
          "aws_route.MyVpc_PublicSubnet3_DefaultRoute_3A83AB36"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_route": {
      "MyVpc_PrivateSubnet1_DefaultRoute_A8CDE2FA": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet1_NATGateway_AD3400C1.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}"
      },
      "MyVpc_PrivateSubnet2_DefaultRoute_9CE96294": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet2_NATGateway_91BFBEC9.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}"
      },
      "MyVpc_PrivateSubnet3_DefaultRoute_EC11C0C5": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet3_NATGateway_D4B50EBE.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}"
      },
      "MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}"
      },
      "MyVpc_PublicSubnet2_DefaultRoute_052936F6": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}"
      },
      "MyVpc_PublicSubnet3_DefaultRoute_3A83AB36": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}"
      }
    },
    "aws_route_table": {
      "MyVpc_PrivateSubnet1_RouteTable_8819E6E2": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTable_CEDCEECE": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTable_B790927C": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_RouteTable_C46AB2F4": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_RouteTable_1DF17386": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_RouteTable_15028F08": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_route_table_association": {
      "MyVpc_PrivateSubnet1_RouteTableAssociation_56D38C7E": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTableAssociation_86A610DA": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTableAssociation_D951741C": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
      },
      "MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}"
      },
      "MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}"
      },
      "MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}"
      }
    },
    "aws_security_group": {
      "FargateService_SecurityGroup_0A0E79CB": {
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552",
          "aws_iam_role_policy_attachment.EBSVolume_AmazonECSInfrastructureRolePolicyForVolumes_Roles0_5949B0BC",
          "data.aws_iam_policy_document.EBSVolume_EBSRole_AssumeRolePolicy_AA76888B",
          "aws_iam_role.EBSVolume_EBSRole_C27DD941"
        ],
        "description": "Default/FargateService/SecurityGroup",
        "egress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic by default",
            "from_port": 0,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_groups": null,
            "self": null,
            "to_port": 0
          }
        ],
        "name": "gFargateServiceSecurityGroup195E9D03",
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_subnet": {
      "MyVpc_PrivateSubnet1_398EC334": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.96.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_1142226B": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.128.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_212308A7": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.160.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_B1662024": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.0.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_7FFD237A": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.32.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_C63FD4A3": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.64.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_vpc": {
      "MyVpc_F9F0CA6F": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "instance_tenancy": "default",
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`fargate service synth FargateService with all properties set should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_availability_zones": {
      "AvailabilityZones": {
        "provider": "aws"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_cluster": {
      "EcsCluster_97242B84": {
        "name": "EcsCluster",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_ecs_service": {
      "FargateService_14DE0490": {
        "availability_zone_rebalancing": "ENABLED",
        "cluster": "\${aws_ecs_cluster.EcsCluster_97242B84.name}",
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "deployment_circuit_breaker": {
          "enable": true,
          "rollback": true
        },
        "deployment_controller": {
          "type": "ECS"
        },
        "deployment_maximum_percent": 150,
        "deployment_minimum_healthy_percent": 55,
        "desired_count": 2,
        "enable_ecs_managed_tags": false,
        "health_check_grace_period_seconds": 60,
        "launch_type": "FARGATE",
        "name": "bonjour",
        "network_configuration": {
          "assign_public_ip": true,
          "security_groups": [
            "\${aws_security_group.FargateService_SecurityGroup_0A0E79CB.id}"
          ],
          "subnets": [
            "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}",
            "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}",
            "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}"
          ]
        },
        "service_registries": {
          "registry_arn": "\${aws_service_discovery_service.FargateService_CloudmapService_9544B753.arn}"
        },
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_definition": "\${aws_ecs_task_definition.FargateTaskDef_C6FB60B4.arn}"
      }
    },
    "aws_ecs_task_definition": {
      "FargateTaskDef_C6FB60B4": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"amazon/amazon-ecs-sample\\",\\"name\\":\\"web\\"}]",
        "cpu": "256",
        "family": "FargateTaskDef",
        "memory": "512",
        "network_mode": "awsvpc",
        "requires_compatibilities": [
          "FARGATE"
        ],
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.FargateTaskDef_TaskRole_0B257552.arn}"
      }
    },
    "aws_eip": {
      "MyVpc_PublicSubnet1_EIP_096967CB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_EIP_8CCBA239": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_EIP_C5ACADAB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_iam_role": {
      "FargateTaskDef_TaskRole_0B257552": {
        "assume_role_policy": "\${data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4.json}",
        "name_prefix": "g-FargateTaskDefTaskRole",
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway": {
      "MyVpc_IGW_5C4A4F63": {
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway_attachment": {
      "MyVpc_VPCGW_488ACE0D": {
        "internet_gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_nat_gateway": {
      "MyVpc_PublicSubnet1_NATGateway_AD3400C1": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet1_EIP_096967CB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB",
          "aws_route.MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_NATGateway_91BFBEC9": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet2_EIP_8CCBA239.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D",
          "aws_route.MyVpc_PublicSubnet2_DefaultRoute_052936F6"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_NATGateway_D4B50EBE": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet3_EIP_C5ACADAB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4",
          "aws_route.MyVpc_PublicSubnet3_DefaultRoute_3A83AB36"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_route": {
      "MyVpc_PrivateSubnet1_DefaultRoute_A8CDE2FA": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet1_NATGateway_AD3400C1.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}"
      },
      "MyVpc_PrivateSubnet2_DefaultRoute_9CE96294": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet2_NATGateway_91BFBEC9.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}"
      },
      "MyVpc_PrivateSubnet3_DefaultRoute_EC11C0C5": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet3_NATGateway_D4B50EBE.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}"
      },
      "MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}"
      },
      "MyVpc_PublicSubnet2_DefaultRoute_052936F6": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}"
      },
      "MyVpc_PublicSubnet3_DefaultRoute_3A83AB36": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}"
      }
    },
    "aws_route_table": {
      "MyVpc_PrivateSubnet1_RouteTable_8819E6E2": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTable_CEDCEECE": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTable_B790927C": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_RouteTable_C46AB2F4": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_RouteTable_1DF17386": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_RouteTable_15028F08": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_route_table_association": {
      "MyVpc_PrivateSubnet1_RouteTableAssociation_56D38C7E": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTableAssociation_86A610DA": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTableAssociation_D951741C": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
      },
      "MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}"
      },
      "MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}"
      },
      "MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}"
      }
    },
    "aws_security_group": {
      "FargateService_SecurityGroup_0A0E79CB": {
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "description": "Default/FargateService/SecurityGroup",
        "egress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic by default",
            "from_port": 0,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_groups": null,
            "self": null,
            "to_port": 0
          }
        ],
        "name": "gFargateServiceSecurityGroup195E9D03",
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_service_discovery_private_dns_namespace": {
      "EcsCluster_DefaultServiceDiscoveryNamespace_B0971B2F": {
        "name": "foo.com",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_service_discovery_service": {
      "FargateService_CloudmapService_9544B753": {
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "dns_config": {
          "dns_records": [
            {
              "ttl": 50,
              "type": "A"
            }
          ],
          "namespace_id": "\${aws_service_discovery_private_dns_namespace.EcsCluster_DefaultServiceDiscoveryNamespace_B0971B2F.id}",
          "routing_policy": "MULTIVALUE"
        },
        "health_check_custom_config": {
          "failure_threshold": 20
        },
        "name": "myapp",
        "namespace_id": "\${aws_service_discovery_private_dns_namespace.EcsCluster_DefaultServiceDiscoveryNamespace_B0971B2F.id}",
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_subnet": {
      "MyVpc_PrivateSubnet1_398EC334": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.96.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_1142226B": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.128.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_212308A7": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.160.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_B1662024": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.0.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_7FFD237A": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.32.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_C63FD4A3": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.64.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_vpc": {
      "MyVpc_F9F0CA6F": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "instance_tenancy": "default",
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`fargate service synth FargateService with an application load balancer target should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_availability_zones": {
      "AvailabilityZones": {
        "provider": "aws"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_cluster": {
      "EcsCluster_97242B84": {
        "name": "EcsCluster",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_ecs_service": {
      "Service_DBC79909": {
        "cluster": "\${aws_ecs_cluster.EcsCluster_97242B84.name}",
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552",
          "aws_lb_listener.lb_listener_657ADDEC",
          "aws_lb_target_group.lb_listener_targetGroup_C7489D1E"
        ],
        "deployment_maximum_percent": 200,
        "deployment_minimum_healthy_percent": 50,
        "enable_ecs_managed_tags": false,
        "health_check_grace_period_seconds": 60,
        "launch_type": "FARGATE",
        "load_balancer": [
          {
            "container_name": "MainContainer",
            "container_port": 8000,
            "target_group_arn": "\${aws_lb_target_group.lb_listener_targetGroup_C7489D1E.arn}"
          }
        ],
        "name": "Service",
        "network_configuration": {
          "assign_public_ip": false,
          "security_groups": [
            "\${aws_security_group.Service_SecurityGroup_C96ED6A7.id}"
          ],
          "subnets": [
            "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}",
            "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}",
            "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
          ]
        },
        "tags": {
          "Name": "Default-Service",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_definition": "\${aws_ecs_task_definition.FargateTaskDef_C6FB60B4.arn}"
      }
    },
    "aws_ecs_task_definition": {
      "FargateTaskDef_C6FB60B4": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"hello\\",\\"name\\":\\"MainContainer\\",\\"portMappings\\":[{\\"containerPort\\":8000,\\"protocol\\":\\"tcp\\"}]}]",
        "cpu": "256",
        "family": "FargateTaskDef",
        "memory": "512",
        "network_mode": "awsvpc",
        "requires_compatibilities": [
          "FARGATE"
        ],
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.FargateTaskDef_TaskRole_0B257552.arn}"
      }
    },
    "aws_eip": {
      "MyVpc_PublicSubnet1_EIP_096967CB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_EIP_8CCBA239": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_EIP_C5ACADAB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_iam_role": {
      "FargateTaskDef_TaskRole_0B257552": {
        "assume_role_policy": "\${data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4.json}",
        "name_prefix": "g-FargateTaskDefTaskRole",
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway": {
      "MyVpc_IGW_5C4A4F63": {
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway_attachment": {
      "MyVpc_VPCGW_488ACE0D": {
        "internet_gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_lb": {
      "lb_A35910C5": {
        "enable_deletion_protection": false,
        "internal": true,
        "load_balancer_type": "application",
        "name": "glb",
        "security_groups": [
          "\${aws_security_group.lb_SecurityGroup_47B6F855.id}"
        ],
        "subnets": [
          "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}",
          "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}",
          "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
        ],
        "tags": {
          "Name": "Default-lb",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_lb_listener": {
      "lb_listener_657ADDEC": {
        "default_action": [
          {
            "target_group_arn": "\${aws_lb_target_group.lb_listener_targetGroup_C7489D1E.arn}",
            "type": "forward"
          }
        ],
        "load_balancer_arn": "\${aws_lb.lb_A35910C5.arn}",
        "port": 80,
        "protocol": "HTTP",
        "tags": {
          "Name": "Default-lb",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_lb_target_group": {
      "lb_listener_targetGroup_C7489D1E": {
        "name": "glblistenertargetGroup9D05303E",
        "port": 80,
        "protocol": "HTTP",
        "tags": {
          "Name": "Default-lb",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "target_type": "ip",
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_nat_gateway": {
      "MyVpc_PublicSubnet1_NATGateway_AD3400C1": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet1_EIP_096967CB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB",
          "aws_route.MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_NATGateway_91BFBEC9": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet2_EIP_8CCBA239.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D",
          "aws_route.MyVpc_PublicSubnet2_DefaultRoute_052936F6"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_NATGateway_D4B50EBE": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet3_EIP_C5ACADAB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4",
          "aws_route.MyVpc_PublicSubnet3_DefaultRoute_3A83AB36"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_route": {
      "MyVpc_PrivateSubnet1_DefaultRoute_A8CDE2FA": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet1_NATGateway_AD3400C1.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}"
      },
      "MyVpc_PrivateSubnet2_DefaultRoute_9CE96294": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet2_NATGateway_91BFBEC9.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}"
      },
      "MyVpc_PrivateSubnet3_DefaultRoute_EC11C0C5": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet3_NATGateway_D4B50EBE.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}"
      },
      "MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}"
      },
      "MyVpc_PublicSubnet2_DefaultRoute_052936F6": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}"
      },
      "MyVpc_PublicSubnet3_DefaultRoute_3A83AB36": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}"
      }
    },
    "aws_route_table": {
      "MyVpc_PrivateSubnet1_RouteTable_8819E6E2": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTable_CEDCEECE": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTable_B790927C": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_RouteTable_C46AB2F4": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_RouteTable_1DF17386": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_RouteTable_15028F08": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_route_table_association": {
      "MyVpc_PrivateSubnet1_RouteTableAssociation_56D38C7E": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTableAssociation_86A610DA": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTableAssociation_D951741C": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
      },
      "MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}"
      },
      "MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}"
      },
      "MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}"
      }
    },
    "aws_security_group": {
      "Service_SecurityGroup_C96ED6A7": {
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "description": "Default/Service/SecurityGroup",
        "egress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic by default",
            "from_port": 0,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_groups": null,
            "self": null,
            "to_port": 0
          }
        ],
        "name": "gServiceSecurityGroup263BC618",
        "tags": {
          "Name": "Default-Service",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "lb_SecurityGroup_47B6F855": {
        "description": "Automatically created Security Group for ELB lb",
        "ingress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow from anyone on port 80",
            "from_port": 80,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_groups": null,
            "self": null,
            "to_port": 80
          }
        ],
        "name": "glbSecurityGroup0275B412",
        "tags": {
          "Name": "Default-lb",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_subnet": {
      "MyVpc_PrivateSubnet1_398EC334": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.96.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_1142226B": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.128.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_212308A7": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.160.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_B1662024": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.0.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_7FFD237A": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.32.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_C63FD4A3": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.64.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_vpc": {
      "MyVpc_F9F0CA6F": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "instance_tenancy": "default",
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_vpc_security_group_egress_rule": {
      "lb_SecurityGroup_toServiceSecurityGroup263BC6188000_C6F27BCD": {
        "description": "Load balancer to target",
        "from_port": 8000,
        "ip_protocol": "tcp",
        "referenced_security_group_id": "\${aws_security_group.Service_SecurityGroup_C96ED6A7.id}",
        "security_group_id": "\${aws_security_group.lb_SecurityGroup_47B6F855.id}",
        "tags": {
          "Name": "Default-lb",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "to_port": 8000
      }
    },
    "aws_vpc_security_group_ingress_rule": {
      "Service_SecurityGroup_fromlbSecurityGroup0275B4128000_23BB883C": {
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "description": "Load balancer to target",
        "from_port": 8000,
        "ip_protocol": "tcp",
        "referenced_security_group_id": "\${aws_security_group.lb_SecurityGroup_47B6F855.id}",
        "security_group_id": "\${aws_security_group.Service_SecurityGroup_C96ED6A7.id}",
        "tags": {
          "Name": "Default-Service",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "to_port": 8000
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`fargate service synth FargateService with only required properties set should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_availability_zones": {
      "AvailabilityZones": {
        "provider": "aws"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_cluster": {
      "EcsCluster_97242B84": {
        "name": "EcsCluster",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_ecs_service": {
      "FargateService_14DE0490": {
        "cluster": "\${aws_ecs_cluster.EcsCluster_97242B84.name}",
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "deployment_maximum_percent": 200,
        "deployment_minimum_healthy_percent": 50,
        "enable_ecs_managed_tags": false,
        "launch_type": "FARGATE",
        "name": "FargateService",
        "network_configuration": {
          "assign_public_ip": false,
          "security_groups": [
            "\${aws_security_group.FargateService_SecurityGroup_0A0E79CB.id}"
          ],
          "subnets": [
            "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}",
            "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}",
            "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
          ]
        },
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_definition": "\${aws_ecs_task_definition.FargateTaskDef_C6FB60B4.arn}"
      }
    },
    "aws_ecs_task_definition": {
      "FargateTaskDef_C6FB60B4": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"amazon/amazon-ecs-sample\\",\\"name\\":\\"web\\"}]",
        "cpu": "256",
        "family": "FargateTaskDef",
        "memory": "512",
        "network_mode": "awsvpc",
        "requires_compatibilities": [
          "FARGATE"
        ],
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.FargateTaskDef_TaskRole_0B257552.arn}"
      }
    },
    "aws_eip": {
      "MyVpc_PublicSubnet1_EIP_096967CB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_EIP_8CCBA239": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_EIP_C5ACADAB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_iam_role": {
      "FargateTaskDef_TaskRole_0B257552": {
        "assume_role_policy": "\${data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4.json}",
        "name_prefix": "g-FargateTaskDefTaskRole",
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway": {
      "MyVpc_IGW_5C4A4F63": {
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway_attachment": {
      "MyVpc_VPCGW_488ACE0D": {
        "internet_gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_nat_gateway": {
      "MyVpc_PublicSubnet1_NATGateway_AD3400C1": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet1_EIP_096967CB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB",
          "aws_route.MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_NATGateway_91BFBEC9": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet2_EIP_8CCBA239.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D",
          "aws_route.MyVpc_PublicSubnet2_DefaultRoute_052936F6"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_NATGateway_D4B50EBE": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet3_EIP_C5ACADAB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4",
          "aws_route.MyVpc_PublicSubnet3_DefaultRoute_3A83AB36"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_route": {
      "MyVpc_PrivateSubnet1_DefaultRoute_A8CDE2FA": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet1_NATGateway_AD3400C1.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}"
      },
      "MyVpc_PrivateSubnet2_DefaultRoute_9CE96294": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet2_NATGateway_91BFBEC9.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}"
      },
      "MyVpc_PrivateSubnet3_DefaultRoute_EC11C0C5": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet3_NATGateway_D4B50EBE.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}"
      },
      "MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}"
      },
      "MyVpc_PublicSubnet2_DefaultRoute_052936F6": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}"
      },
      "MyVpc_PublicSubnet3_DefaultRoute_3A83AB36": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}"
      }
    },
    "aws_route_table": {
      "MyVpc_PrivateSubnet1_RouteTable_8819E6E2": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTable_CEDCEECE": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTable_B790927C": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_RouteTable_C46AB2F4": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_RouteTable_1DF17386": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_RouteTable_15028F08": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_route_table_association": {
      "MyVpc_PrivateSubnet1_RouteTableAssociation_56D38C7E": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTableAssociation_86A610DA": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTableAssociation_D951741C": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
      },
      "MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}"
      },
      "MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}"
      },
      "MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}"
      }
    },
    "aws_security_group": {
      "FargateService_SecurityGroup_0A0E79CB": {
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "description": "Default/FargateService/SecurityGroup",
        "egress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic by default",
            "from_port": 0,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_groups": null,
            "self": null,
            "to_port": 0
          }
        ],
        "name": "gFargateServiceSecurityGroup195E9D03",
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_subnet": {
      "MyVpc_PrivateSubnet1_398EC334": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.96.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_1142226B": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.128.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_212308A7": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.160.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_B1662024": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.0.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_7FFD237A": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.32.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_C63FD4A3": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.64.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_vpc": {
      "MyVpc_F9F0CA6F": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "instance_tenancy": "default",
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`fargate service synth FargateService with service connect should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_availability_zones": {
      "AvailabilityZones": {
        "provider": "aws"
      }
    },
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_cluster": {
      "EcsCluster_97242B84": {
        "name": "EcsCluster",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_ecs_service": {
      "FargateService_14DE0490": {
        "cluster": "\${aws_ecs_cluster.EcsCluster_97242B84.name}",
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "deployment_maximum_percent": 200,
        "deployment_minimum_healthy_percent": 50,
        "enable_ecs_managed_tags": false,
        "launch_type": "FARGATE",
        "name": "FargateService",
        "network_configuration": {
          "assign_public_ip": false,
          "security_groups": [
            "\${aws_security_group.FargateService_SecurityGroup_0A0E79CB.id}"
          ],
          "subnets": [
            "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}",
            "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}",
            "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
          ]
        },
        "service_connect_configuration": {
          "enabled": true,
          "namespace": "cool",
          "service": [
            {
              "client_alias": {
                "port": 80
              },
              "port_name": "api",
              "timeout": {
                "idle_timeout_seconds": 10,
                "per_request_timeout_seconds": 10
              }
            }
          ]
        },
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_definition": "\${aws_ecs_task_definition.FargateTaskDef_C6FB60B4.arn}"
      }
    },
    "aws_ecs_task_definition": {
      "FargateTaskDef_C6FB60B4": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"amazon/amazon-ecs-sample\\",\\"name\\":\\"web\\",\\"portMappings\\":[{\\"containerPort\\":80,\\"protocol\\":\\"tcp\\",\\"name\\":\\"api\\"}]}]",
        "cpu": "256",
        "family": "FargateTaskDef",
        "memory": "512",
        "network_mode": "awsvpc",
        "requires_compatibilities": [
          "FARGATE"
        ],
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "task_role_arn": "\${aws_iam_role.FargateTaskDef_TaskRole_0B257552.arn}"
      }
    },
    "aws_eip": {
      "MyVpc_PublicSubnet1_EIP_096967CB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_EIP_8CCBA239": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_EIP_C5ACADAB": {
        "domain": "vpc",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_iam_role": {
      "FargateTaskDef_TaskRole_0B257552": {
        "assume_role_policy": "\${data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4.json}",
        "name_prefix": "g-FargateTaskDefTaskRole",
        "tags": {
          "Name": "Default-FargateTaskDef",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway": {
      "MyVpc_IGW_5C4A4F63": {
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_internet_gateway_attachment": {
      "MyVpc_VPCGW_488ACE0D": {
        "internet_gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_nat_gateway": {
      "MyVpc_PublicSubnet1_NATGateway_AD3400C1": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet1_EIP_096967CB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB",
          "aws_route.MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet2_NATGateway_91BFBEC9": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet2_EIP_8CCBA239.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D",
          "aws_route.MyVpc_PublicSubnet2_DefaultRoute_052936F6"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      },
      "MyVpc_PublicSubnet3_NATGateway_D4B50EBE": {
        "allocation_id": "\${aws_eip.MyVpc_PublicSubnet3_EIP_C5ACADAB.allocation_id}",
        "depends_on": [
          "aws_route_table_association.MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4",
          "aws_route.MyVpc_PublicSubnet3_DefaultRoute_3A83AB36"
        ],
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}",
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    },
    "aws_route": {
      "MyVpc_PrivateSubnet1_DefaultRoute_A8CDE2FA": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet1_NATGateway_AD3400C1.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}"
      },
      "MyVpc_PrivateSubnet2_DefaultRoute_9CE96294": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet2_NATGateway_91BFBEC9.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}"
      },
      "MyVpc_PrivateSubnet3_DefaultRoute_EC11C0C5": {
        "destination_cidr_block": "0.0.0.0/0",
        "nat_gateway_id": "\${aws_nat_gateway.MyVpc_PublicSubnet3_NATGateway_D4B50EBE.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}"
      },
      "MyVpc_PublicSubnet1_DefaultRoute_95FDF9EB": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}"
      },
      "MyVpc_PublicSubnet2_DefaultRoute_052936F6": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}"
      },
      "MyVpc_PublicSubnet3_DefaultRoute_3A83AB36": {
        "depends_on": [
          "aws_internet_gateway_attachment.MyVpc_VPCGW_488ACE0D"
        ],
        "destination_cidr_block": "0.0.0.0/0",
        "gateway_id": "\${aws_internet_gateway.MyVpc_IGW_5C4A4F63.id}",
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}"
      }
    },
    "aws_route_table": {
      "MyVpc_PrivateSubnet1_RouteTable_8819E6E2": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTable_CEDCEECE": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTable_B790927C": {
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_RouteTable_C46AB2F4": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_RouteTable_1DF17386": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_RouteTable_15028F08": {
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_route_table_association": {
      "MyVpc_PrivateSubnet1_RouteTableAssociation_56D38C7E": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet1_RouteTable_8819E6E2.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet1_398EC334.id}"
      },
      "MyVpc_PrivateSubnet2_RouteTableAssociation_86A610DA": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet2_RouteTable_CEDCEECE.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet2_1142226B.id}"
      },
      "MyVpc_PrivateSubnet3_RouteTableAssociation_D951741C": {
        "route_table_id": "\${aws_route_table.MyVpc_PrivateSubnet3_RouteTable_B790927C.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PrivateSubnet3_212308A7.id}"
      },
      "MyVpc_PublicSubnet1_RouteTableAssociation_2ECEE1CB": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet1_RouteTable_C46AB2F4.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet1_B1662024.id}"
      },
      "MyVpc_PublicSubnet2_RouteTableAssociation_227DE78D": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet2_RouteTable_1DF17386.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet2_7FFD237A.id}"
      },
      "MyVpc_PublicSubnet3_RouteTableAssociation_5C27DDA4": {
        "route_table_id": "\${aws_route_table.MyVpc_PublicSubnet3_RouteTable_15028F08.id}",
        "subnet_id": "\${aws_subnet.MyVpc_PublicSubnet3_C63FD4A3.id}"
      }
    },
    "aws_security_group": {
      "FargateService_SecurityGroup_0A0E79CB": {
        "depends_on": [
          "data.aws_iam_policy_document.FargateTaskDef_TaskRole_AssumeRolePolicy_CBABA2D4",
          "aws_iam_role.FargateTaskDef_TaskRole_0B257552"
        ],
        "description": "Default/FargateService/SecurityGroup",
        "egress": [
          {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic by default",
            "from_port": 0,
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_groups": null,
            "self": null,
            "to_port": 0
          }
        ],
        "name": "gFargateServiceSecurityGroup195E9D03",
        "tags": {
          "Name": "Default-FargateService",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_service_discovery_private_dns_namespace": {
      "EcsCluster_DefaultServiceDiscoveryNamespace_B0971B2F": {
        "name": "cool",
        "tags": {
          "Name": "Default-EcsCluster",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_subnet": {
      "MyVpc_PrivateSubnet1_398EC334": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.96.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet1",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet2_1142226B": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.128.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet2",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PrivateSubnet3_212308A7": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.160.0/19",
        "map_public_ip_on_launch": false,
        "tags": {
          "Name": "Default/MyVpc/PrivateSubnet3",
          "aws-cdk:subnet-name": "Private",
          "aws-cdk:subnet-type": "Private",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet1_B1662024": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 0)}",
        "cidr_block": "10.0.0.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet1",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet2_7FFD237A": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 1)}",
        "cidr_block": "10.0.32.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet2",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      },
      "MyVpc_PublicSubnet3_C63FD4A3": {
        "availability_zone": "\${element(data.aws_availability_zones.AvailabilityZones.names, 2)}",
        "cidr_block": "10.0.64.0/19",
        "map_public_ip_on_launch": true,
        "tags": {
          "Name": "Default/MyVpc/PublicSubnet3",
          "aws-cdk:subnet-name": "Public",
          "aws-cdk:subnet-type": "Public",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        },
        "vpc_id": "\${aws_vpc.MyVpc_F9F0CA6F.id}"
      }
    },
    "aws_vpc": {
      "MyVpc_F9F0CA6F": {
        "cidr_block": "10.0.0.0/16",
        "enable_dns_hostnames": true,
        "enable_dns_support": true,
        "instance_tenancy": "default",
        "tags": {
          "Name": "Default/MyVpc",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "g"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;
